// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms|Table compact 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  table-layout: fixed;
  border-collapse: collapse;
  line-height: 200%;
}

.c1 thead tr,
.c1 tbody tr:not(:last-child) {
  border-bottom: 1px solid #eee;
}

.c1 tfoot tr {
  border-top: 1px solid #eee;
}

.c1 caption {
  text-align: left;
  text-transform: uppercase;
  font-size: 0.875em;
  color: #999;
}

.c1 td,
.c1 th {
  padding: 0em 0;
  vertical-align: middle;
}

.c1 td:not(:first-child),
.c1 th:not(:first-child) {
  padding-left: 0.125em;
}

.c1 td:not(:last-child),
.c1 th:not(:last-child) {
  padding-right: 0.125em;
}

.c1 th {
  font-weight: bold;
  text-align: left;
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <caption
      align="bottom"
    >
      Table caption
    </caption>
    <thead>
      <tr>
        <th>
          Component
        </th>
        <th>
          Dependency
        </th>
        <th>
          Version
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          CodeBlock
        </td>
        <td>
          react-syntax-highlighter
        </td>
        <td>
          ^9.0.0
        </td>
      </tr>
      <tr>
        <td>
          Markdown
        </td>
        <td>
          react-markdown
        </td>
        <td>
          ^4.0.3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots atoms|Table default 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  table-layout: fixed;
  border-collapse: collapse;
  line-height: 200%;
}

.c1 thead tr,
.c1 tbody tr:not(:last-child) {
  border-bottom: 1px solid #eee;
}

.c1 tfoot tr {
  border-top: 1px solid #eee;
}

.c1 caption {
  text-align: left;
  text-transform: uppercase;
  font-size: 0.875em;
  color: #999;
}

.c1 td,
.c1 th {
  padding: 0.1875em 0;
  vertical-align: middle;
}

.c1 td:not(:first-child),
.c1 th:not(:first-child) {
  padding-left: 0.375em;
}

.c1 td:not(:last-child),
.c1 th:not(:last-child) {
  padding-right: 0.375em;
}

.c1 th {
  font-weight: bold;
  text-align: left;
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <caption
      align="bottom"
    >
      Table caption
    </caption>
    <thead>
      <tr>
        <th>
          Component
        </th>
        <th>
          Dependency
        </th>
        <th>
          Version
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          CodeBlock
        </td>
        <td>
          react-syntax-highlighter
        </td>
        <td>
          ^9.0.0
        </td>
      </tr>
      <tr>
        <td>
          Markdown
        </td>
        <td>
          react-markdown
        </td>
        <td>
          ^4.0.3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
